--- a/core/docs/conf2024.md
+++ b/core/docs/conf2024.md
@@ -1,7 +1,7 @@
 # BRC Recording Schemes Meeting 2024
 A demonstration of this project was given at the BRC Recording Schemes Meeting held at Wallinford
 on March 9th 2024. These notes were created for that meeting to summarise the workflow 
-for using this project to create an altas website.
+for using this project to create an atlas website.
 
 ## BRC Recording Schemes Meeting 2024
 The main steps to create your own local atlas, hosted on GitHub, from a spreadsheet of biological records are:
