Updated BRC repo name

--- a/core/docs/conf2024.md
+++ b/core/docs/conf2024.md
@@ -32,18 +32,18 @@ Some links used at the recording schemes meeting:
       </a>
   </li>
   <li>
-      <a target="_blank" href="https://github.com/BiologicalRecordsCentre/brevi-atlas-test">
-          BRC brevi-atlas-test repo
+      <a target="_blank" href="https://github.com/BiologicalRecordsCentre/configurable-atlas">
+          BRC configurable-atlas repo
       </a>
   </li>
   <li>
-      <a target="_blank" href="https://github.com/burkmarr/brevi-atlas-test">
-          Burkmar brevi-atlas-test forked repo
+      <a target="_blank" href="https://github.com/burkmarr/configurable-atlas">
+          Burkmar configurable-atlas forked repo
       </a>
   </li>
   <li>
-      <a target="_blank" href="https://burkmarr.github.io/brevi-atlas-test/">
-          'GitHub pages' website for Burkmar brevi-atlas-test forked repo
+      <a target="_blank" href="https://burkmarr.github.io/configurable-atlas/">
+          'GitHub pages' website for Burkmar configurable-atlas forked repo
       </a>
   </li>
 </ul>
